@@ -140,6 +140,8 @@ interface
 - forbid problem modifications in SCIP_STAGE_{INIT,EXIT}PRESOLVE
 - new parameter numerics/lpfeastol for primal feasibility tolerance used in LP solver
 - new macro SCIPdebugPrintCons() to print constraint only if SCIP_DEBUG flag is set
+- new method SCIPchgVarName() and SCIPchgConsName() which can be used to change name of variables and
+  constraints in problem creation stage
 
 performance improvements:
 - improved scaling of linear constraints, linear constraints with integral variables will now be scale with
